[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf>=1.7.2",
    "fpdf2>=2.8.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "plotly>=6.3.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
]
